# kivyhw

./: README.md  pyproject.toml  requirements.txt
kivyhw/: main.py
